--- a/styles.css
+++ b/styles.css
@@ -7,27 +7,33 @@
 
 }
 
-/* this selector selects all divs inside of .flex-container */
-.flex-container div {
-
-}
-
+/* Header */
 .flex-container .header {
-
+  flex-direction: row;
+  background-color: #1F2937;
 }
 .flex-container .header .left{
-
+  flex:1 1 0%;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  font-weight: bold;
 }
 .flex-container .header .right{
-
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex:1 1 0%;
 }
 .flex-container .header .right .headlink{
 }
+
+
+/* Section 1 */
 .flex-container .upperContent{
   background: #1F2937;
 }
 .flex-container .upperContent .left{
-  background: #1F2937;
 }
 .flex-container .upperContent .left .title {
 }
@@ -38,6 +44,8 @@
 
 .flex-container .upperContent .right{
 }
+
+/* Section 2 */
 .flex-container .midContent{
 }
 
@@ -53,6 +61,8 @@
  }
  .flex-container .midContent .lower{
  }
+
+ /* Section 3 */
 .flex-container .lowerContent{
 }
 .flex-container .lowerContent .group{
@@ -61,6 +71,8 @@
 }
 .flex-container .lowerContent .group .quotePerson{
 }
+
+/* Section 4 */
 .flex-container .lowestContent{
 }
 .flex-container .lowestContent .group{
@@ -77,5 +89,7 @@
 }
 .flex-container .lowestContent .group .left .cTAtext{
 }
+
+/* Footer */
 .flex-container .footer{
 }
