--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   flex-direction: column;
 }
 .flex-container {
-  font-size: 0;
+  
 }
 
 /* Header */
@@ -18,7 +18,7 @@
   align-items: center;
   font-size: 24px;
   font-weight: bold;
-  color:#F9FAF8
+  color:#F9FAF8;
 }
 .flex-container .header .right{
   flex-direction: row;
@@ -43,6 +43,7 @@
 .flex-container .upperContent .middle{
   margin: 10%;
   flex-direction: row;
+  font-size: 0;
 }
 
 .flex-container .upperContent .middle .left{
@@ -93,23 +94,48 @@ img{
 
 /* Section 2 */
 .flex-container .midContent{
+  flex: 1 1 0%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
  .flex-container .midContent .upper {
+   font-size: 36px;
+   font-weight: 900;
+   color:#1F2937;
  }
  .flex-container .midContent .mid{
+   flex-direction: row;
+   justify-content: space-evenly;
+   align-items: center;
  }
  .flex-container .midContent .mid .rectangles{
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   padding-right: 60px;
+   
  }
  .flex-container .midContent .mid .rectangles .upper{
+  border: 4px solid brown;
+  border-radius: 10px;
+  height:250px;
+  width:250px;
+  padding-right: 30px;
  }
  .flex-container .midContent .mid .rectangles .lower{
+  width:250px;
+  text-align: center;
  }
  .flex-container .midContent .lower{
  }
 
  /* Section 3 */
 .flex-container .lowerContent{
+  background: #E5E7EB;
 }
 .flex-container .lowerContent .group{
 }
